--- a/delivery_app/pubspec.yaml
+++ b/delivery_app/pubspec.yaml
@@ -52,9 +52,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-
-  freezed: ^2.5.7
   build_runner: ^2.4.12
+  freezed: ^2.5.7
+  go_router: ^14.2.7
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
