--- a/delivery_app/pubspec.yaml
+++ b/delivery_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   freezed_annotation: ^2.4.4
+  go_router: ^14.2.7
+  get_it: ^7.7.0
+  
 
 
 dev_dependencies:
@@ -54,7 +57,8 @@ dev_dependencies:
 
   build_runner: ^2.4.12
   freezed: ^2.5.7
-  go_router: ^14.2.7
+  
+
   
 
 # For information on the generic Dart part of this file, see the
