--- a/delivery_app/pubspec.yaml
+++ b/delivery_app/pubspec.yaml
@@ -36,9 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
-  freezed_annotation: ^2.4.4
+  
   go_router: ^14.2.7
   get_it: ^7.7.0
+  shared_preferences: ^2.3.2
+  dartz: ^0.10.1
+  
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
   
 
 
@@ -56,7 +61,9 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
   build_runner: ^2.4.12
+  
   freezed: ^2.5.7
+  json_serializable: ^6.8.0
   
 
   
